; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipset/extr_ip_set_core.c_ip_set_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipset/extr_ip_set_core.c_ip_set_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"%p: free with %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"vfree\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"kfree\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ip_set_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i64 @is_vmalloc_addr(i8* %4)
  %6 = icmp ne i64 %5, 0
  %7 = zext i1 %6 to i64
  %8 = select i1 %6, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0)
  %9 = call i32 @pr_debug(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %3, i8* %8)
  %10 = load i8*, i8** %2, align 8
  %11 = call i64 @is_vmalloc_addr(i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @vfree(i8* %14)
  br label %19

16:                                               ; preds = %1
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 @kfree(i8* %17)
  br label %19

19:                                               ; preds = %16, %13
  ret void
}

declare dso_local i32 @pr_debug(i8*, i8*, i8*) #1

declare dso_local i64 @is_vmalloc_addr(i8*) #1

declare dso_local i32 @vfree(i8*) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
